--- a/Yves_Leterme.mw
+++ b/Yves_Leterme.mw
@@ -19,8 +19,8 @@ Leterme legt nie goed by de Franstoalige pers.
 * Derde incident: in december 2007 vergelykt Leterme, onrechtstreeks, de RTBF mi Radio Mille Collines (en oatzender in [[Rwanda]] ten tyde van de genocide tusschen Hutu's en Tutsi's). Doamei bedoelt 'n da de Franschtoalign omroep nem diaboliseert.
 
 == Externe koppelienge ==
-* [http://www.yvesleterme.be Zyn officieeln website]
-
+* [http://www.yvesleterme.be Zyn eigen website]
+* [http://www.premier.be Zyn website als premier]
 
 [[Categorie:West-Vlamsche polletieker|Leterme, Yves]]
 [[Categorie:Wervik|Leterme, Yves]]
