--- a/Yves_Leterme.mw
+++ b/Yves_Leterme.mw
@@ -10,7 +10,7 @@ Aloewel dat'n overtyd e gryst imago adde (zyn bynoame is ''Boekouder''), ist'n i
 Achter de federoale verkieziengn va juni 2007, wos Didier Reynders informateur. Toen da zyn rolle wos uutespeeld, kwam Leterme formateur: nem oalt by de verkieziengn de mounsterscore van om en by de 800.000 vôorkeursstemmn. Leterme beguste d'ounderandeliengn vour en oranje-blauwe coaliesje (christn-democroatn en liberoaln). Moa dat foeterde van ol gin kantn: Leterme zelve zou tactische foutn emakt en, moa surtout de Woalsche CDh spartelde teegn. Discuusjepunt wos surtout de communautaire kwestjes woaby da de Vloamiengn noch de Woaln toegeviengn wulnde doen. Op 23 oest 2007 zei Leterme an de keunienk da zyn opdracht mislukt wos. E tydje loater krygt Leterme e twidde kanse. Moa in december 2007 is 't dudelik da ''Oranje-blow'' gin regerieng ku vormn. Leterme is toun minister voo ''Institutionele Ervormiengn, Begrôtienge en Mobiliteit'' gekoomn in de interimregerienge van [[Guy Verhofstadt|Verhofstadt]]. E wos ouk vice-premier.
 
 == Premier ==
-Achter d'interimregerieng Verhofstadt III wos de PS betrokkn by d'ounderandeliengn. Uutendelik kwam er toch e regerieng mi Leterme an 't oofd: Leterme I. Op 21 moarte 2008 zweirde Leterme 'n êed by 'n keunienk.
+Achter d'interimregerieng Verhofstadt III wos de PS betrokkn by d'ounderandeliengn. Uutendelik kwam er toch e regerieng mi Leterme an 't oofd: Leterme I. Op 21 moarte 2008 zweirde Leterme 'n êed by 'n keunienk. 't Beloovn toch moeilike tydn te komn vo zyn regerieng: ol de gazettn woarn scetpisch over de regeriengsverkloaring (veel te voag zeidn ze). En zelfs binn zyn eigen kartel zyn d'r menschen die begun twyfeln.
 
 == Ambras me de Woaln ==
 Leterme legt nie goed by de Franstoalige pers. 
