*Empty MediaWiki Message*

--- a/Yves_Leterme.mw
+++ b/Yves_Leterme.mw
@@ -2,7 +2,7 @@
 
 '''Yves Leterme''' ([[Wervik]], [[6 oktober]] [[1960]]) is e [[West-Vloandern|West-Vlamschen]] polletieker. 
 
-Zyn ouders komn uut [[Koomn]], en is opgekwikt in [[Zillebeke]], moar e wunt anno 2007 in [[Yper]]. En is vôorzitter gewist van de polletieke party [[CD&V]]. E wos ouk Minister-President van [[Vloandern]] in de regering Leterme-I (20 juli 2004 - 27 juni 2007) tout achter de federale verkieziengn van juni 2007. 
+Zyn ouders komn uut [[Koomn (Belgie)|Koomn]], en is opgekwikt in [[Zillebeke]], moar e wunt anno 2007 in [[Yper]]. En is vôorzitter gewist van de polletieke party [[CD&V]]. E wos ouk Minister-President van [[Vloandern]] in de regering Leterme-I (20 juli 2004 - 27 juni 2007) tout achter de federale verkieziengn van juni 2007. 
 
 Aloewel dat'n overtyd e gryst imago adde (zyn bynoame is ''Boekouder''), ist'n in de joungste joarn uutegroeid tout êen van Vloanderns populairste polletiekers. Yves Leterme goat er ton ouk prat op dat 'n e geweunn mens is gebleevn: e goat goa kykn na de [[vélokoerse|koers]] a zyn zeune rydt, e zegt teegn olleman dat 'n e gête et in zyn of, en en is supporter van Standard.
 
