*Empty MediaWiki Message*

--- a/Koomn_(Belgie).mw
+++ b/Koomn_(Belgie).mw
@@ -7,3 +7,6 @@ Koomn kwam begun joarn tachntig in 't nieuws omdat er e Vlamsche schole kwam. De
 
 == Externe koppelienge ==
 * [http://www.villedecomines-warneton.be/ De website van Koomn-Woastn (ver ol in 't Frans)]
+
+
+[[nl:Komen (België)]]
