*Empty MediaWiki Message*

--- a/Forestier.mw
+++ b/Forestier.mw
@@ -1,4 +1,9 @@
-{{beg}}
-'''Forestier''' (outkapper, buswachter) was een êretitel ounder 't [[West-Francië|West-Frankisch ryk]] round 't joar 800. Gekende forestiers uut de [[Vloandern|Vlamsche]] geschiedenisse woarn Liederik, [[Inghelram|Ingelram]] en [[Audacer]]. 
+'''Forestier''' (outkapper, buswachter, gouwgroaf) was een êretitel ounder 't [[West-Francië|West-Frankisch ryk]] round 't joar 800. 
 
-In [[Oarelbeke]] is 't er een voetbolstadium vernoemd noa de forestiers.
+Gekende forestiers uut de Vlamsche geschiedenisse woarn [[Lyderic]], [[Inghelram]] en [[Audacer]].
+
+De forestiers zoun an de boasis liggn van ’t [[Groafschap Vloandern]]. [[Karel den Grôotn]]  zoudt  de streke van [[Oarelbeke]] in lêen geschounkn en an de forestier Lyderic, vôorvoader van [[Boudewyn I van Vloandern]].
+
+In Oarelbeke ist er een voetbolstadium, sporthalle en een poar stroatn vernoemd noa de forestiers.
+
+[[categorie: Frankisch Ryk]]
