--- a/Forestier.mw
+++ b/Forestier.mw
@@ -7,3 +7,4 @@ De forestiers zoun an de boasis liggn van ’t [[Groafschap Vloandern]]. [[Karel
 In Oarelbeke ist er een voetbolstadium, sporthalle en een poar stroatn vernoemd noa de forestiers.
 
 [[categorie: Frankisch Ryk]]
+[[Categorie: Oarelbeke]]
