--- a/Koomn_(Belgie).mw
+++ b/Koomn_(Belgie).mw
@@ -8,5 +8,8 @@ Koomn kwam begun joarn tachntig in 't nieuws omdat er e Vlamsche schole kwam. De
 == Externe koppelienge ==
 * [http://www.villedecomines-warneton.be/ De website van Koomn-Woastn (ver ol in 't Frans)]
 
+[[Categorie: Plekke in Enegouwn]]
+[[Categorie: Stad in Enegouwn]]
+[[Categorie: Koomn-Woastn]]
 
 [[nl:Komen (België)]]
