*Empty MediaWiki Message*

--- a/Karel_den_Grôotn.mw
+++ b/Karel_den_Grôotn.mw
@@ -13,11 +13,11 @@
 | voader = Pepeyn den Kortn
 | moeder = Bertrada van Laon
 }}
-'''Karel den Grôotn''' (Latyn ''Carolus Magnus''), van ‘t Uus van de [[Karoliengers]], [[Jupille-sur-Meuse]],  [[2 april]] [[742]] - [[Aakn]], [[28 januoari]] [[814]]) was van 768 tout an z’n dôod keunink van de [[Frankn]] en in 800 wierd ’n deur paus Leo III tout keizer van [[Illig Rôoms Ryk]] gekrôond. 
+'''Karel den Grôotn''' (Latyn ''Carolus Magnus''), van ‘t Uus van de [[Karoliengers]], [[Jupille-sur-Meuse]],  [[2 april]] [[742]] - [[Aakn]], [[28 januoari]] [[814]]), was van 768 tout an z’n dôod keunink van de [[Frankn]] en in 800 wierd ’n deur paus Leo III tout keizer van 't [[Illig Rôoms Ryk]] gekrôond. 
 ==Zyn leevn==
-Karel den Grôotn was de zeune van Pepeyn den Kortn en Bertrada van Laon, bygenoamd ''Bertrada met de grôte voetn''. D’r zyn gin portreiten van Karel bekend, moa deurda z’n skelet in Aakn bewoard is, weetn ze dat ’n mè z’n 1 meter 93 styf grôot was. ‘t Was e rostn en j’aad e moustache. 
+Karel den Grôotn was de zeune van Pepeyn den Kortn, d'n eestn keunink van 't Uus van de Karoliengers, en Bertrada van Laon, bygenoamd ''Bertrada met de grôte voetn''. D’r zyn gin portreitn van Karel bekend, moa deurda z’n skelet in Aakn bewoard is, weetn ze dat ’n mè z’n 1 meter 93 styf grôot was. ‘t Was e rostn en j’aad e moustache. 
 
-Z’n voader Pepeyn den Kortn, de zeune van Karel Martel en de latstn [[Hofmeier]] van ’t geslacht van de [[Pepinidn]], was d’n eerstn keunink van ‘t Uus van de Karoliengers. 
+Zyn grôotvoader Karel Martel was de latstn [[Hofmeier]] van ’t geslacht van de [[Pepinidn]]. 
 
 Karel den Grôotn volgde z’n voader ip achter z’n dôod in 768 en regeerde tegoare mè z’n broere Karloman. In 771 stierf Karloman ounverwachts en kwam Karel keunink van hêel ‘t [[Frankisch Ryk]].
 ==Zyn veroveriengn==
