--- a/Doornik.mw
+++ b/Doornik.mw
@@ -90,7 +90,8 @@ Doornik is de gemêente met de grotste ippervlakte in [[België]]. Nevenst Doorn
 *'t Museum vo woapns en militaire geschiedenisse.
 *'t Oudeidkundig museum. 
 
-[[Categorie:Enegouwn]]
+[[Categorie:Plekke in Enegouwn]]
 [[Categorie:Stad in Enegouwn]]
+[[Categorie:Dôornik]]
 
 [[nl:Doornik]]
