*Empty MediaWiki Message*

--- a/Karel_den_Grôotn.mw
+++ b/Karel_den_Grôotn.mw
@@ -21,7 +21,7 @@ Zyn grôotvoader Karel Martel was de latstn [[Hofmeier]] van ’t geslacht van d
 
 Karel den Grôotn volgde z’n voader ip achter z’n dôod in 768 en regeerde tegoare mè z’n broere Karloman. In 771 stierf Karloman ounverwachts en kwam Karel keunink van hêel ‘t [[Frankisch Ryk]].
 ==Zyn veroveriengn==
-[[Ofbeeldienge:Frankenrijk.jpg|right|thumb|350px|’t Frankisch Ryk in 't blauw met de veroveringn van Karel den Grôotn in ‘t oranje]]
+[[Ofbeeldienge:Frankenrijk.jpg|right|thumb|350px|’t Frankisch Ryk in 't blauw met de veroveriengn van Karel den Grôotn in ‘t oranje]]
 Je breidde ‘t Frankisch Ryk uut en verenigde e grôot stik van West- en Centroal Europa. Je voerde mêer of viftig oorloogn en je won ze bykan ollemolle. Zyn teegnstanders woarn o.a. de Saksn, de Friezn, de Langobardn en de Avaarn. Ip ’t toppunt van z’n macht liep zyn Ryk van de Elbe en de Oder tout an de Pyreneeën. 
 *In 773: de Langobardischn oofdstad Pavia. Je zet d’n Langobardischn keunink Desiderius of. Met de toestemmienge van de paus magt ‘n em ip Poasdag 774 keunink van de Frankn en de Langobardn noemn. 
 *In 785:de Saksn. D’n ertog van de Saksn Widukind bekeert em tout ‘t christelik gelôof. 
@@ -75,14 +75,14 @@ Mè Fastrade van Franconie:
 Mè Luutgarde van Alemanië:
 gin kinders
 
-Uut z’n veroudinge mè Sigrada:
+Uut z’n veroudienge mè Sigrada:
 * Rothaid (784-)
-Uut z’n veroudinge mè Reginopycrha:
+Uut z’n veroudienge mè Reginopycrha:
 * Drogo van Metz (792-), bisschop van Metz, abt van Abdye van Luxeuil
 * Hugo (794-844), abt
-Uut z’n verhoudinge met Adelinde:
+Uut z’n veroudienge met Adelinde:
 * Theodorik (807-819)
-Uut z’n veroudinge mè Madelgardis:
+Uut z’n veroudienge mè Madelgardis:
 * Routhildis (807-), abdis van Faremoutiers
 
 [[Categorie: Keunienk der Frankn]]
