--- a/Inghelram.mw
+++ b/Inghelram.mw
@@ -5,5 +5,6 @@ Achter z’n dôod ist ’n ipgevolgd deur z’n schôonzeune [[Audacer]], de vo
 Inghelram wos in dienst van de [[West-Francië|West-Frankische]] keunienk als "outakker" (forestier). Je ligt begroavn ounder de kerktorre van de Sint-Salvatorskerke (d'oofdkerke van Oarelbeke). Zyn gedenkstêen is ingemetseld in de crypte van de torre, die ip de plekke stoat van de ôorsprounkelike kapelle van 't "hof" of 't buswachtersuus. 
 
 [[Categorie: Frankisch Ryk]]
+[[Categorie: Oarelbeke]]
 
 [[nl:Ingelram II]]
