/* Uutsloagn competitie */  't is voe te blèètn

--- a/Club_Brugge_KV.mw
+++ b/Club_Brugge_KV.mw
@@ -169,6 +169,8 @@ De vôorbereidienge start traditioneel mè oefnmatchkes teegn ploegn uut loager 
 | 25 || style="text-align:left;" | '''Moeskroen''' - Club Brugge || 2 - 0 || 51 || 2
 |-
 | 26 || style="text-align:left;" | '''Club Brugge''' - FC Brussels || 1 - 0 || 54 || 2
+|-
+| 27 || style="text-align:left;" | '''FC Dender''' - Club Brugge || 1 - 0 || 54 || 2
 |}
 <sup>*</sup>Mats uutgesteld van 't slicht weer
 
