*Empty MediaWiki Message*

--- a/Dirk_Frimout.mw
+++ b/Dirk_Frimout.mw
@@ -1,8 +1,8 @@
 {{plat|Poperiengs}}[[Ofbeeldienge:frimout.jpg|thumb|Dirk Frimout (foto: NASA)]]
 '''Dirk Burggroaf Frimout''' ([[Poperienge]], [[21 moarte]] [[1941]]) wos 'n êerstn Vloamienk in de [[ruumte]]. 
 
-== Jeugdjoarn ==
-Dirk Frimout is ebôorn in de Gasthuisstraat, numero 69: overtyd wos dat e klôoster van de poaters Recolettn, sedert 1981 ej doa 't [[Hoppemuseum]]. E goenk in 't loager na de stoatsschole (RMS).
+== Jeugdjoarn & studies ==
+Dirk Frimout is ebôorn in de Gasthuisstraat, numero 69: overtyd wos dat e klôoster van de poaters Recolettn, sedert 1981 ej doa 't [[Hoppemuseum]]. E goenk in 't loager na de stoatsschole (RMS). An 'n Unief van Gent oalde Frimout zyn diplom van Ingenieur Elektronica (1963) en zyn doctoroat in de toegepaste fysica (1970). E goenk na Colorado in [[Amerika]] vo zyn post-doctoroat. Loater kwam 'n ouk nog doctor in de Toegepaste Weetnschappn.
 
 == Êestn Vlamschn astronaut ==
 Van 24 moarte toet 2 april 1992 vlôog Frimout, tope mi zes [[Amerika|Amerikoansche]] astronautn, in de Atlantis, e [[Space Shuttle]] van d'Amerikoanders. Prins Filip vroeg live op 'n televisie, toen da Frimout toertjes an 't droain wos in de ruumte: "En Dirk, wat ziet kij door het raam?" en "zek maar Filip, in de ruimte is er keen protocol".
