--- a/Lodewyk_Maekeblyde.mw
+++ b/Lodewyk_Maekeblyde.mw
@@ -26,9 +26,9 @@ Maekeblyde wos e typischen dichter van de Contra-Reformoasje. In 1607 vroegen ze
 * Leven van den H. Joseph, met het officie van den selven heylighen (1625)
 * Den Hemelschen handel der devote zielen (1626)
 
-== Bronn ==
-In Poperienge ist er e stroate en 
-Lodewijk Makeblijde College in Rijswijk
+== Erkennienge ==
+In Poperienge ist er e stroate en e zoale na nem vernoemd. In Olland (Rijswijk) stoat er e 
+Lodewijk Makeblijde College.
 
 == Bronn ==
 * F. Jos. van den Branden en J.G. Frederiks, Biographisch woordenboek der Noord- en Zuidnederlandsche letterkunde (1888-1891)
