--- a/Poperienge.mw
+++ b/Poperienge.mw
@@ -60,6 +60,7 @@ De bynoame van e Poperienknoare is [[Keikop]].
 * [[Lucien Deschodt]], oud-burgemêester en volksvertegenwôordiger voe de [[CVP]].
 * [[Dirk Frimout]], 'n êestn Belg in de ruumte. 
 * [[Mêester Ghybe]], fictivve figeure uut de folklore.
+* [[Lodewyk Maekeblyde]], e poater-jezuït.
 * [[Anne Provoost]], schryfster.
 * [[Henri d'Udekem d'Acoz]] (27 november 1933), oud-burgemêester en nonkel va [[Mathilde van Belgie|prinses Mathilde]].
 
