*Empty MediaWiki Message*

--- a/Lodewyk_Maekeblyde.mw
+++ b/Lodewyk_Maekeblyde.mw
@@ -1,5 +1,5 @@
 {{plat|Poperiengs}}
-'''Lodewyk Maekeblyde''' ([[24 moarte]] [[1564]], [[Poperienge]] - [[17 ogustus]] [[1630]], Delft) wos e poater jezuit uut Poperienge. E wos de zeune van 'n burgemêester.
+'''Lodewyk Maekeblyde''' ([[24 moarte]] [[1564]], [[Poperienge]] - [[17 ogustus]] [[1630]], Delft) wos e poater jezuït uut Poperienge. E wos de zeune van 'n burgemêester.
 
 == Zyn leevn ==
 Maekeblyde goenk van 1579 tout 1584 na de humaniora in [[Sint-Omaars]]. E studeerde twi joar filosofie in [[Dowaai]]. In 1586 traad 'n in by de jezuittn. Achter twi joar novice te zyn in [[Dôornik]] studeernde Latyn en Grieks, were in Sint-Omaars. Doa lei 'n in 1588 zyn geloftn of. E gaf lesse in [[Brugge]] en [[Yper]], en e goenk van 1595 tout 1599 theologie goan studeern in [[Leuvn]]. 
