*Empty MediaWiki Message*

--- a/Lodewyk_Maekeblyde.mw
+++ b/Lodewyk_Maekeblyde.mw
@@ -4,7 +4,7 @@
 == Zyn leevn ==
 Maekeblyde goenk van 1579 tout 1584 na de humaniora in [[Sint-Omaars]]. E studeerde twi joar filosofie in [[Dowaai]]. In 1586 traad 'n in by de jezuittn. Achter twi joar novice te zyn in [[Dôornik]] studeernde Latyn en Grieks, were in Sint-Omaars. Doa lei 'n in 1588 zyn geloftn of. E gaf lesse in [[Brugge]] en [[Yper]], en e goenk van 1595 tout 1599 theologie goan studeern in [[Leuvn]]. 
 In 1600 wos 'n rector enoemd in [[Winoksbergen]] en in 1604 in Yper. 
-Van 1605 tout 1606 wos Maekeblyde predikant in [[Antwerpn]], en doarachter in [[Scherpeneuvel]]. Van 1608 of wunt'nde in Gent. In 1611 goenk Lodewyk Maekeblyde na Delft: e kwam missionoaris in Olland. Dat wos ni evident, want in dien tyd woarn de katholiekn - en de jezuitn zekers ni - doa ni geirn ezien. In 1617 bevôorbeeld kost 'n ollêne moa 's nachts goan preekn. In 1619 wos 'n zelfs anoudn, moar e wos were vry eloatn achter da ze e borgsomme van 600 guldn nereleien.
+Van 1605 tout 1606 wos Maekeblyde predikant in [[Antwerpn]], en doarachter in [[Scherpeneuvel]]. Van 1608 of wunt'nde in Gent. In 1611 goenk Lodewyk Maekeblyde na Delft: e kwam missionoaris in Olland. Dat wos ni evident, want in dien tyd woarn de katholiekn - en de jezuitn zekers ni - doa ni geirn ezien. In 1617 bevôorbeeld kost 'n ollêne moa 's nachts goan preekn. In 1619 wos 'n zelfs anoudn, moar e wos were vry eloatn achter da ze e borgsomme van 600 guldn nereleien.<ref>[http://www.heiligen-3s.nl/heiligen/08/17/08-17-1630-Lodewijk-Makeblijde.php?SP=41 http://www.heiligen-3s.nl/], URL bekeekn op 23/03/2008</ref>.
 Maekeblyde goenk dôod op 17 ogustus 1630. E legt begroavn in Voorschoten. Op zyn graf stoat er: ''God maakt hem blijde''.
 
 == Werk ==
@@ -34,8 +34,6 @@ Lodewijk Makeblijde College.
 * F. Jos. van den Branden en J.G. Frederiks, Biographisch woordenboek der Noord- en Zuidnederlandsche letterkunde (1888-1891)
 * K. ter Laan, Letterkundig woordenboek voor Noord en Zuid (1941)
 * G.J. van Bork en P.J. Verkruijsse, De Nederlandse en Vlaamse auteurs (1985)
-
-http://www.heiligen-3s.nl/heiligen/08/17/08-17-1630-Lodewijk-Makeblijde.php?SP=41
-
+<references />
 
 [[Categorie:Poperienge]]
