--- a/Lodewyk_Maekeblyde.mw
+++ b/Lodewyk_Maekeblyde.mw
@@ -8,7 +8,7 @@ Van 1605 tout 1606 wos Maekeblyde predikant in [[Antwerpn]], en doarachter in [[
 Maekeblyde goenk dôod op 17 ogustus 1630. E legt begroavn in Voorschoten. Op zyn graf stoat er: ''God maakt hem blijde''.
 
 == Werk ==
-Maekeblyde wos e typischen dichter van de Contra-Reformoasje. In 1607 vroegen ze nem om e catechismus te moakn vor ol de bisdomn woa da ze Vlams en Ollands klappnde. E schryf gebeedn op rym da je kuste leezn vôor en achter 't eetn; die gebeedn goengn vele joarn mei. Zyn boekn woarn dikkers erdrukt. Zyn klêen cvatechismus wos zelfs in 't Frans vertoald.
+Maekeblyde wos e typischen dichter van de [[Contra-Reformoasje]]. In 1607 vroegen ze nem om e [[catechismus]] te moakn vor ol de bisdomn woa da ze Vlams en Ollands klappnde. E schryf gebeedn op rym da je kuste leezn vôor en achter 't eetn; die gebeedn goengn vele joarn mei. Zyn boekn woarn dikkers erdrukt. Zyn klêen cvatechismus wos zelfs in 't Frans vertoald.
 
 * Cort onderwijs van acht oeffeninghen (1597): e klêen stichtelik boeksje vo de klêne joengs.
 * Thien oeffeninghen (1604): e boek mi gebeedn.
