--- a/Lodewyk_Maekeblyde.mw
+++ b/Lodewyk_Maekeblyde.mw
@@ -26,8 +26,8 @@ Maekeblyde wos e typischen dichter van de [[Contra-Reformoasje]]. In 1607 vroege
 * Leven van den H. Joseph, met het officie van den selven heylighen (1625)
 * Den Hemelschen handel der devote zielen (1626)
 
-== Erkennienge ==
-In Poperienge ist er e stroate en e zoale na nem vernoemd. In Olland (Rijswijk) stoat er e 
+== Erkennieng ==
+In Poperienge is 't er e stroate en e zoale na nem vernoemd. In Olland (Rijswijk) stoat er e 
 Lodewijk Makeblijde College.
 
 == Bronn ==
