*Empty MediaWiki Message*

--- a/Drinkam.mw
+++ b/Drinkam.mw
@@ -1,3 +1,4 @@
+{{beg}}
 {{Patrôon:Infobox Fransche gemêente
 |naam = Drinkam
 |officieel = Drincham
@@ -16,8 +17,6 @@
 |web = 
 |
 }}
-
-
 '''Drinkam''' (Frans: ''Drincham'') is e gemeente in 't noordn va [[Vrankryk]], in 't [[Département du Nord]]. Der weunn oungeveer 200 menschn.
 
 [[Image:Drincham - Eglise Saint-Wandrille.jpg|thumb|left|Eglise Saint-Wandrille in Drinkam]]
