*Empty MediaWiki Message*

--- a/Vondel.mw
+++ b/Vondel.mw
@@ -1,5 +1,5 @@
 {{dbintro}}
 *[[Vondel (bier)]]: e sorte van bier
-*[[Vondel (schryver)]]: nen Ollandschn dichter en tonêelschryver
+*[[Joost van den Vondel|Vondel (schryver)]]: nen Ollandschn dichter en tonêelschryver
 
 {{db}}
