nog moar e begun

--- a/Gyvelde.mw
+++ b/Gyvelde.mw
@@ -16,7 +16,7 @@
 |web = [http://www.cc-flandre.fr/ghyvelde/ Officieeln website]
 |
 }}
-
+{{beg}}
 '''Gyvelde''' (Frans: ''Ghyvelde'') es een gemêente in 't nôordn va [[Vrankryk]], mêer bepoald in het [[Noorderdepartement]]. 't Grenst an [[België]], ter ôogte va [[Veurne]].
 
 {{Patrôon:GemêentnDKK}}
