*Empty MediaWiki Message*

--- a/Pietjesbak.mw
+++ b/Pietjesbak.mw
@@ -1,4 +1,4 @@
-(dit is geen algemeen nederlands!!!!)E '''pietjesbak''' (of pietebak) is en achtoekig dienk voen in te pietn. 't Is mêestol in out emakt en an de binnekant is't er mêestol etwot in zochte stofoasche eplakt, want pietn doe je me [[teirlienk|teirlienks]] en aars makt dat te vele leevn.
+E '''pietjesbak''' (of pietebak) is en achtoekig dienk voen in te pietn. 't Is mêestol in out emakt en an de binnekant is't er mêestol etwot in zochte stofoasche eplakt, want pietn doe je me [[teirlienk|teirlienks]] en aars makt dat te vele leevn.
 
 Pietn gebeurt vele up kaffee. 't Bestoan verschillnde speln.
 
