*Empty MediaWiki Message*

--- a/5_(getal).mw
+++ b/5_(getal).mw
@@ -1,8 +1,12 @@
 '''Vuve''' of '''veuve''' is 't cyfer '''5''', e [[natuurlik getal]] achter [[4 (getal)|viere]] en voorn [[6 (getal)|zesse]].
 
+== Wiskunde ==
+* Vuve is 't derde priemgetal.
+* 't Romeinsche cyfer vo vuve is V.
+* Vuve is e [[Reke van Fibonacci|Fibonaccigetal]].
+
 ==Gebruuk==
 *Vuuf joar is ouk e lustrum.
-
 
 [[Categorie:Natuurlik getal]]
 
