--- a/Poperienge.mw
+++ b/Poperienge.mw
@@ -41,7 +41,9 @@
 De bynoame van e Poperienknoare is [[Keikop]].
 
 == Geschiedenisse ==
-* De noame Poperienge komt verzekerst van: Pupurn+inga+heim. 't Uus van menêre Pupurn, e Frank uut de joarn 430.
+* De noame Poperienge komt messchiens van: Pupurn+inga+heim. 't Uus van menêre Pupurn, e Frank uut de joarn 430.
+* Round 666 zou Poperienge weg egeevn zyn an een abdy die nu in Sint-Omer legt. Da klôoster goa joarenlank vele invloed en op 'n stad (tout an de [[Fransche revoluusje]] zelfs). Doadeure kom et ouk da Poperienge nôois afankelik wos van de [[Groavn van Vloandern]]. Dat adde zyn vôor- en nadêeln.
+* In 1147 gaf [[Diederik van de Elzas]] Poperienge neur êeste [[keure]]. Die keure wos in 1187 nog e ki bevestigd deur Graaf [[Filips van de Elzas]] die ouk toestemmienge gaf om mart t'oudn in Poperienge (de Vrydagmart die nu nog ossan bestoat). 
 * Poperienge e nôois goed overêenekomn mi [[Yper]]. De rivaliteit wos dikkers ni te doen. Yper koste ni verdroagn da Poperienge oek [[Loaknandel|loakenindustrie]] ad. In de joarn 1341 viel Yper zelfs Poperienge an, en nam ze krygsgevangn mei. Poperienge muchte vogens e verdrag gin loakn moakn, en doarom moestn ze oek na 't tribunoal van de Groaf van Vloanderen (1372). De 2 partiejn blêevn palavern. Uut die tyd stamt oek de bynoame van de Poperienknoars.
 
 == Beziensweirdigheedn & attraksjes ==
