--- a/Poperienge.mw
+++ b/Poperienge.mw
@@ -52,7 +52,7 @@ De bynoame van e Poperienknoare is [[Keikop]].
 * Kom je mi je vèlo, ton ku je de [[Hoppelandroute]] (43 km) e ki probeern. Ze legt in 't nôordwesn va Poperienge, tegen [[de Schreve]].
 * [[Maria Ommegank|Ommegank]]: de joarlikse procesje ('n êestn zundag va juli) ter erinnering an 't miroakel van e dôodgebôorn kiendje da were levend kwam in zyn graf.
 * Drie kerkn: [[Sinte-Beirtns (Poperienge)|Sinte-Beirtns]] (loat-gotisch), [[Oeze Vrouwn (Poperienge)|Oeze-Vrouwn]] (gotisch), e [[Sint-Jan (Poperienge)|Sint-Jan]] (gotisch).
-* Hopmuseum: je lêert er olles over [[ommel]] en 'n plok.
+* Hopmuseum: je lêert er olles over [[ommel (plante)|ommel]] en 'n plok.
 * Hoppefêestn: vullebak fêestn, mit e grôotn stoet; olles stoat in 't têekn van 'n ommel nateurlik.
 
 [[Ofbeeldienge:Poperinge - Sint-Janskerk.jpg|thumb|left|Sint-Jan]]
