*Empty MediaWiki Message*

--- a/Audacer.mw
+++ b/Audacer.mw
@@ -1,4 +1,10 @@
-{{beg}}
-'''Audacer''' of  '''Odakar''' was [[forestier]] van de pagus flandrensis. Je was de voader van [[Boudewyn I van Vloandern]].
+'''Audacer''',  '''Odoacer''' of '''Odakar''' (°ca. [[810]] – † ca. [[864]]) wos [[forestier]] van de Vlamsche gouw (Pagus Flandrensis) en groaf van [[Oarelbeke]] deur te trouwn met de dochter van [[Inghelram]]. Je wos ôok ''honores'' (weireldlike abt) van de Sint-Pietersabdye in [[Gent]]. 
+
+Je wos de voader van [[Boudewyn I van Vloandern]]. De forestiers liggn an de boasis van ’t loatere [[groafschap Vloandern]].
+
+Audacer ligt begroavn ounder de kerktorre van de Sint-Salvatorskerke van Oarelbeke. Zyn gedenkstêen is ingemetseld in de crypte van de torre, die ip de plekke stoat van de ôorsprounkelike kapelle van 't "hof" of 't buswachtersuus. 
+
+[[Categorie: Frankisch Ryk]]
+[[Categorie: Oarelbeke]]
 
 [[nl: Odakar III]]
