--- a/Blankenbergs_Varretje.mw
+++ b/Blankenbergs_Varretje.mw
@@ -1,8 +1,10 @@
-’t '''Blanknbergs Varretje''' of '''Grote Ede''' verzorgt de [[Polder en woaterienge|ofwoaterienge]] noa de zêe van ’t Poldergebied  tusschn de [[Gentele]] en de [[Zydelinge]], nu een dêel van de [[Nieuwe Polder van Blankenberge]]. ’t Lopt centroal deur de [[Uitkerkse Polder]], een nateurreservoat met bezoekerscentrum [[Groenwaecke]]. De ofwoaterienge gebeurt deur ’t getydegeboendn sluzencomplex van [[Blanknberge]].
+[[Ofbeeldienge: Meetkerke - Blankenbergs Vaartje 2.jpg|thumb|<center>Blanknbergs varretje in [[Meetkerke]]]]
+[[Ofbeeldienge: Meetkerke - Blankenbergs Vaartje 1.jpg|thumb|<center>Blanknbergs varretje]]
+’t '''Blanknbergs Varretje''' of '''Grote Ede''' verzorgt de [[Polder en woaterienge|ofwoaterienge]] noa de zêe van ’t Poldergebied  tusschn de [[Gentele]] en de [[Zydelinge]], nu een dêel van de [[Nieuwe Polder van Blankenberge]]. ’t Lopt centroal deur de [[Uutkerksche Polder]], een nateurreservoat met bezoekerscentrum [[Groenwaecke]]. De ofwoaterienge gebeurt deur ’t getydegeboundn sluzencomplex van [[Blanknberge]].
 
-De oudste verwyzienge is were te viendn in een Charter van 1337 die de bouw van de nieuwe dykn vôrenschryft achter de stormvloed woarby da "[[Scarphout (Blanknberge)|Scarphout]]" by Blanknberge deur de zêe verzwolgn is. ‘t Oudst gekend reglement is de "Keure van de Waetringhe van Blanckenberghe" geacteerd ip 12 juni 1563. 
+De oudste verwyzienge is were te vindn in een Charter van 1337 die de bouw van de nieuwe dykn vôrenschryft achter de stormvloed woarby da "[[Scarphout (Blanknberge)|Scarphout]]" by Blanknberge deur de zêe verzwolgn is. ‘t Oudst gekend reglement is de "Keure van de Waetringhe van Blanckenberghe" geacteerd ip 12 juni 1563. 
 ==Gedicht==
-Gedicht over ’t Blanknbergs Varretje van de Blanknbergsche volksdichter en kunstschilder [[Jozef Hoenraet]]:
+Gedicht over ’t Blanknbergs Varretje van de Blanknbergsche volksdichter en kunstschilder Jozef Hoenraet:
 
 ::'''’t Blankenbergs Varretje'''
 
