*Empty MediaWiki Message*

--- a/Blanknberge.mw
+++ b/Blanknberge.mw
@@ -44,6 +44,7 @@ Je ziet ze van alle kantn komn noa ‘t strange. In ’t oogsizoen legt de NMBS 
 ==Geschiedenisse==
 *[[Scarphout (Blanknberge)|Scarphout]]
 *[[Gentele]]
+*[[Blanknbergs Varretje]]
 *[[Groaf-Jansdyk]]
 *[[Roesschaert]]
 
@@ -74,6 +75,9 @@ Je ziet ze van alle kantn komn noa ‘t strange. In ’t oogsizoen legt de NMBS 
 *Parkklanken: zomerfestival in oopn lucht in ’t Albert I Park, iedere woensdagoavond in juli en augustus
 *Zomershow Crazy World in "Het Witte Paard" in juli en augustus. [http://www.witte-paard.be]
 *Blommestoet, iedere latste zundag van augustus
+
+==Deilgemeinte ==
+[[Uutkerke]]
 
 ==Politiek==
 ===Burgemeisters:===
@@ -144,8 +148,9 @@ Je ziet ze van alle kantn komn noa ‘t strange. In ’t oogsizoen legt de NMBS 
 * [[Karate]] : Karateclub Zendokan Blankenberge
 * [[Jiu-jitsu]] : Jiu-jitsu Blankenberge: [http://www.jiu-jitsu-blankenberge.be Website]
 
-==Deilgemeinte ==
-[[Uutkerke]]
+==Veloroute==
+*[[Genteleroute]]
+
 ==Bekende Blanknbergenoars==
 * [[Frans Masereel]], [[groafische kunst|grafisch kunstnoare]].
 * [[David Dehenauw]], weerman.
