*Empty MediaWiki Message*

--- a/Blanknberge.mw
+++ b/Blanknberge.mw
@@ -148,6 +148,10 @@ Je ziet ze van alle kantn komn noa ‘t strange. In ’t oogsizoen legt de NMBS 
 * [[Karate]] : Karateclub Zendokan Blankenberge
 * [[Jiu-jitsu]] : Jiu-jitsu Blankenberge: [http://www.jiu-jitsu-blankenberge.be Website]
 
+==Openboar vervoer==
+*[[Stoatie van Blanknberge]]
+*[[Kusttram]]
+
 ==Veloroute==
 *[[Genteleroute]]
 
