--- a/Andrei_Tsjmil.mw
+++ b/Andrei_Tsjmil.mw
@@ -1,24 +1,1 @@
-{{nuweg}}
-'''Andrei Tsjmil''' (Chabarovsk (Sovjet-Unie), 22 januari 1963) wos e coureur die surtout in de [[Vloandern|Vlamsche]] koersn goed presteerde. En et verschillige nationaliteitn at: Sovjet, Rus, Oekraïener, Moldaviër en Belg (deur naturalisoasche). 
-
-In 2002 at 'n ze dybêen ebrookn en krêeg 'n gin nieuw contract van Lotto. E besliste van 'n êeste kêe voun dermei uut te schêen en ne dei dadde met en overwinnienge in 'n latstn rit van de Rounde van België.
-
-==Belangrykste overwinniengn==
-
-===Klassiekers===
-*[[Parys-Roubaix]]: 1994
-*[[Rounde van Vloandern]]: 2000
-*[[Parys-Tours]]: 1997
-*[[Miloan-San Remo]]: 1999
-
-*Eindklassement Weireldbeker: 1999
-
-===Aar grôte koersn===
-*[[Kuurne-Brussel-Kuurne]]: 1998, 2000
-*[[E3 Prys Vloandern|E3 Prys Oarelbeke]]: 1994, 2001
-*[[Dwars door Vlaanderen|Tweisn deur Vloandern]]: 1996
-*GP France Ouest Plouay: 1994
-*Parys-Bourges: 1991
-
-==Externe koppelienge==
-*[http://www.youtube.com/watch?v=cbjhTjLG5ac Tchmil tope met Moncassin epakt up miender dan 1 kilomeiter van de mete in Parys-Roubaix van 1997.]
+#REDIRECT[[Andrei Tchmil]]
