--- a/Emile_Buysse.mw
+++ b/Emile_Buysse.mw
@@ -1,6 +1,6 @@
-'''Emile Buysse''' ([[Terneuzen]], 10 of 15 oktober  [[1910]] - [[Brugge]], [[9 ogustus]] [[1987]]) was een [[Zêeuws-Vloandern|Zêeuws-Vlamsche]] schryver die een grôot dêel van z’n leevn in [[Brugge]] ([[West-Vloandern]]) weunde.
+'''Emile Buysse''' ([[Terneuzn]], 10 of 15 oktober  [[1910]] - [[Brugge]], [[9 ogustus|9 augustus]] [[1987]]) was een [[Zêeuws-Vloandern|Zêeuws-Vlamsche]] schryver die een grôot dêel van z’n leevn in [[Brugge]] ([[West-Vloandern]]) weunde.
 ==Leven en werk==
-Emile Buysse was de zeune van een oofdounderwyzer in ‘t Zeeuws-Vlamsche stadje [[Sluus]]. Vanof 1937 giengt ’n in Brugge weunen. Je was styf  ginteresseerd  in de toale en cultuur van zyn geboortestreke en ‘t [[West-Vlams]]. Binst de [[Twidde Weireldoorloge]]
+Emile Buysse was de zeune van een oofdounderwyzer in ‘t Zeeuws-Vlamsche stadje [[Sluus]]. Vanof 1937 giengt ’n in Brugge weunn. Je was styf  g'interesseerd  in de toale en cultuur van zyn geboortestreke en ‘t [[West-Vlams]]. Binst de [[Twidde Weireldoorloge]]
 ad Buysse  sympathie vo ‘t Duutsche [[nationaalsocialisme]], surtout ‘t heem-en volknkundig aspect van die ideologie. Je publiceerde van 1940-1944 in “De Waag”, een blad da pro-Duuts was, ounder de pseudoniem Gwyde de Vlaeme. Je publiceerde artikels over heem-en volkskunde in de “Provinciale Zeeuwse Courant”. Je schrêef ook een poar streekromangs in ’t West-Vlams.
 Je was redacteur van “Nederland”,  in ‘t "Vlaams Weekblad" schrêeft ‘n vanof 1975 de rubriek "Onder het Belfort" en je publiceerde in "Neerlandia", "Op den Uitkijk" en "Elckerlyc". 
 Emile Buysse verzorgde ook ‘t radioprogram "Van het oude vaatje"  ip BRT-Kortryk. 
@@ -11,7 +11,7 @@ Proza:
 *Miele keert terug. 1937
 *Spokenhof. 1938. 
 *Sneeuw en houtrook, wintervertellingen van de Zwinkant. 1942. 
-*Het boek van [[Knokke]] – [[’t Zoute]] . 1965.
+*Het boek van [[Knokke]] – [['t Zoute]] . 1965.
 Vertoalienge:
 *Brian Stone, Gevangen in El Alamein. 1946.
 ==Externe koppelinge==
