--- a/Gaston_Durnez.mw
+++ b/Gaston_Durnez.mw
@@ -128,6 +128,8 @@ Sedert 1999 ist ‘n columnist van de weekbloadn ''De Bond'' en ''Tertio''. Je w
 [[Categorie: West-Vlamsche schryver|Durnez, Gaston]]
 [[Categorie: West-Vlamsche dichter|Durnez, Gaston]]
 [[Categorie: West-Vlamsche journalist|Durnez, Gaston]]
+[[Categorie:Wervik|Durnez, Gaston]]
+
 
 [[en:Gaston Durnez]]
 [[nl :Gaston Durnez]]
