*Empty MediaWiki Message*

--- a/1564.mw
+++ b/1564.mw
@@ -1,3 +1,7 @@
+==Geboorn==
+;moarte
+*[[24 moarte|24]] - [[Lodewyk Maekeblyde]]
+
 ==Gestorvn==
 ;februoari
 *[[18 februoari|18]] - [[Michelangelo Buonarotti]]
