--- a/17_ogustus.mw
+++ b/17_ogustus.mw
@@ -3,6 +3,7 @@
 ==Geboorn==
 *[[1834]] - [[Peter Benoit]]
 ==Gestorvn==
+*[[1630]] - [[Lodewyk Maekeblyde]]
 *[[1972]] - [[Raymond Brulez]]
 
 [[Categorie:Datum]]
