--- a/Lodewyk_Maekeblyde.mw
+++ b/Lodewyk_Maekeblyde.mw
@@ -36,4 +36,6 @@ Lodewijk Makeblijde College.
 * G.J. van Bork en P.J. Verkruijsse, De Nederlandse en Vlaamse auteurs (1985)
 <references />
 
-[[Categorie:Poperienge]]
+[[Categorie:Poperienge|Maekeblyde Lodewyk]]
+[[Categorie:Gêestelikke|Maekeblyde Lodewyk]]
+[[Categorie:Vlamsche dichter|Maekeblyde Lodewyk]]
