--- a/Strange.mw
+++ b/Strange.mw
@@ -1,7 +1,7 @@
 [[Ofbeeldienge:Ostend beach 01.jpg|thumb|<center>Strange van [[Ostende (stad)|Ostende]]]]
 Een '''strange''' of '''strand''' is e vlakke stroke land langs de [[zêe]], [[oceoan]] of [[meer]], die bestoat uut [[zand]] (lik an de [[Vlamsche Kust]]), stêens of [[schelpe|schelpn]].
 
-In de [[zomer]] wordt ’t strange dikwils gebruukt als recreoatiegebied, woa da je kunt zunn, zwemn en speeln. Soms wordn d’r ook ligzetels, cabientjes en parasols vereurd. En in de [[wienter]] kun je d’r  goan uutwoaien en genietn van de zêelucht.
+In de [[zomer]] wordt ’t strange dikwils gebruukt als recreoatiegebied, woa da je kunt zunn, zwemn en speeln. Soms wordn d’r ook ligzetels, cabientjes en parasols vereurd. En in de [[winter]] kun je d’r  goan uutwoaien en genietn van de zêelucht.
 ==Externe koppelienge==
 *[http://ruben.weerwoord.be/home/webcamskust.htm Webcams an de Vlamsche kust]
 
