*Empty MediaWiki Message*

--- a/Vincent_Van_Quickenborne.mw
+++ b/Vincent_Van_Quickenborne.mw
@@ -1,27 +1,28 @@
 {{plat|Kortryks}}
 
-'''Vincent van Quickenborne''' (°[[Gent]], [[1 ogustus]] [[1973]]) , oftewel 'Q', es een minister in de federale regering Leterme I. 
-<br>Van Quickenborne is nen [[Kortryk|Kortrykzoan]] en ie komt ip voor de [[Open VLD]]. Voor de moment es ie in Leterme I 'minister voor Ondernemen en Vereenvoudigen'. Ie wilt dat doen da ip een pragmatische maniere, juste lik dat 'n Stoatssecretaris wos: iè een lyste van onzinnige administratieve wettn gemakt en ie wilde ze êen voa êen ofskaffn.
+'''Vincent van Quickenborne''' (°[[Gent]], [[1 ogustus]] [[1973]]) , oftewel 'Q', es ne minister in de federale regering Leterme I (2008). 
 
-Alhoewel dat ie nog redelik jonk es, eit ie toch al veel woaterkes deurzwommn. Je kwam êest ip veur de VU&ID, doarnoa met [[Spirit]] om te endign in de [[VLD]], nu [[Open VLD]]. In 't begun wos ie surtout gekend voor zyn stunts (peis mor an de joint histoire in et Parlement en et bezoek by [[Louis Tobback]] als lid van de [[Witte Comités]]), moa de latste joaren begunt ie ollik een bitje serieusker over te komn. 
+Van Quickenborne is nen [[Kortryk|Kortrykzoan]] en ie komt ip voe de [[Open VLD]]. Vôo de moment es ie in Leterme I 'minister voor Ondernemen en Vereenvoudigen'. Ie wilt dat doene ip en pragmoatische maniere, juste lik dat'n Stoatssecretaris wos: j'oat en lyste van onzinnige administratieve wettn gemakt en ie wildige ze êen vôa êen ofskaffn.
 
-J'eit em by de pers nie al te populair gemakt toen dat ie me Fluppe en Matilde ip andelsreize noa [[Zuud-Afrika]] is getrokkn en constant me zyn tote ip de fotto probeerde te groakn, nevenst [[Nelson Mandela]] en [[Desmond Tutu]].  
+Oloewel dat ie nog redelik jonk es, eit ie toch al veel woaterkes deurzwommn. Je kwam êest ip voe de VU&ID, d'r'achter met [[Spirit]] om te endign in de [[VLD]], nu [[Open VLD]]. In 't begun wos't ie surtout gekend voor zyn stunts (peis moar an de joint histoire in et parlement en et bezoek by [[Louis Tobback]] ols lid van de [[Witte Comités]]), moa de latste joarn begunt'ie ollik en bitje serieusker over te komn. 
+
+J'eit em by de pers nie al te populair gemakt ton dat ie me prins Filip en Mathilde ip andelsreize noa [[Zuud-Afrika]] is getrokkn en constant me zynn kop ip de fotto probeerde te g'roakn, onder andre nevenst [[Nelson Mandela]] en [[Desmond Tutu]].  
 
 == Polletieke carrière ==
-* Senator in [[België]] (1999-2003)
-* Gemêenteroadslid in [[Kortryk]] (2001-2006,2007-)
+* Senoator in [[België]] (1999-2003)
+* Gemêenteroadslid in [[Kortryk]] (2001-2006, 2007- )
 * Stoatssecretaris in [[België]] (2003-2007)
-* Minister voor Ondernemen en Vereenvoudigen in Leterme I
+* Minister voor Ondernemen en Vereenvoudigen in Leterme I (2008- )
 
 ==Varia==
-In [[2007]] eit ie een [[West-Vloandern|West-Vlamsche]] koarte uutgebrocht (als verkieziengsdrukweirk voo de [[Federoale parlementsverkiezingn 2007]]) die dudelik geïnspireerd wos ip de West-Vlamsche wikipedia.
+In [[2007]] eit ie en [[West-Vloandern|West-Vlamsche]] koarte uutgebrocht (voe verkieziengsdrukweirk voo de [[Federoale parlementsverkieziengn 2007]]) die dudelik geïnspireerd wos ip de West-Vlamsche wikipedia.
 
 == Externe koppelienge ==
-* [http://www.staatssecretarisq.be/ Zyne website ton dat ie nog staatssecretoaris wos]
+* [http://www.staatssecretarisq.be/ Zyne website ton dat'ie nog staatssecretoaris wos]
 * [http://www.kafka.be/ Zyn kafka-website voor administratieve verêenvoudigienge]
 
-[[Categorie: Kortryk|V]]
-[[Categorie: West-Vlamsche polletieker|V]]
+[[Categorie: Kortryk|Van Quickenborne, Vincent]]
+[[Categorie: West-Vlamsche polletieker|Van Quickenborne, Vincent]]
 
 [[en:Vincent Van Quickenborne]]
 [[nl:Vincent Van Quickenborne]]
