*Empty MediaWiki Message*

--- a/NGA.mw
+++ b/NGA.mw
@@ -7,11 +7,11 @@ De '''NGA''' of '''Nieuw-Gentse Alliantie''' is e ludiekn actiegroup en politiek
 Verre olles van de NGA is achteredoan van de [[N-VA]] (noame en indêlienge van de site) en 't [[Vlams Belang]] (70-puntnplan van [[Filip Dewinter]], oofddoekn, GMO) of van olletwêe (ounofankelikeid).
 
 ==Ounofankelikeid==
-Up 30 moarte van 2008 gon ze Gent ounofankelik verkloarn en de stadstoat uutroepn. Olle fêestelikeedn goan deuregoan byn Sint-Joacobs. 't Stoatsoofd van de Gentsche Vrystoat got de tsoar zyn en 'n dien ze paleis got in Moscou (e wyk in Ledeberg) stoan.
+Up 30 moarte van 2008 gon ze Gent ounofankelik verkloarn en de stadstoat uutroepn. Olle fêestelikeedn goan deuregoan byn Sint-Joacobs. 't Stoatsoofd van de Gentsche Vrystoat got de tsoar of keizer zyn en 'n dien ze paleis got in Moscou (e wyk in Ledeberg) stoan.
 
 ==70-puntnplan==
 Nog nie olle puntn zyn ingevuld, mo sommigte puntn goan specifiek over West-Vloamiengn:
-*3. At 'n toevloed van West-Vloamiengn nie uutschidt, gon der radicoale acties kommn van de NGA-milities, de GMO (Turbojugend Gent).
+*3. At 'n toevloed van West-Vloamiengn nie uutschydt, gon der radicoale acties kommn van de NGA-milities, de GMO (Turbojugend Gent).
 *4. Vervolgienge van de Gentsche supporters van [[Club Brugge]].
 *7. Verplichte inburgeriengscursus voun olle Gentsche West-Vloamiengn (nie missn me West-Vlamsche Gentenoars). An ze nie wulln of verwyzn no de Verkloarienge van de Rechtn van de Mens, gon ze uuteweezn zyn no de goelags van Gentbrugge.
 *21. West-Vloamiengn kunn in e beperkte moate e verbluufsvergunnienge krygn, ze krygn toune e zworte koarte. Voun dedie met een abonnement van Club Brugge, en telt dadde nie.
@@ -21,14 +21,19 @@ Nog nie olle puntn zyn ingevuld, mo sommigte puntn goan specifiek over West-Vloa
 ==Reactie==
 't Is ol vele commentoar up ekommn, oundermêer up forums. 't Volt doar up oe serieus dan sommigte menschn 't ollemoale neemn. Oundertusschn zyn der ouk ol êentige interviews round ewist up de radio (Radio 2) en in de gazette (Nieuwsblad).
 
+==Ountmaskerienge==
+Ip 20 moarte komt er in 't Nieuwsblad (kykt noa [[#==Externe koppeliengn==|Externe koppeliengn]]) en verdudelykienge met de echte motivoatie van de persifloage en nen iproep voe de fêeste van 30 moarte ip Sint-Jacobs met onder andre West-Vlamsche groepn. 
+
 ===Teegnbewegiengn===
 *WDF (West-Vlaams Democratisch Front)
 *NGA Busters (voun bedreigde West-Vloamiengn)
 *WVB (West-Vloams Belang)
 *G Plus
+*Vlaanderen barst
 
-==Externe koppelienge==
+==Externe koppeliengn==
 *[http://www.gentonafhankelijk.org 'n Officieeln site van de NGA]
+*[http://www.gentenaar.be/Article/Detail.aspx?ArticleID=JM1PH0NC&PostCode=9000 Artikel Gentenoare]
 
 [[Categorie:Belgische actiegroep]]
 [[Categorie:Gent]]
