*Empty MediaWiki Message*

--- a/Anselmus_Adornes.mw
+++ b/Anselmus_Adornes.mw
@@ -5,7 +5,7 @@ Anselmus Adornes was marchang in wulle, loakn en aluun. Je weunde in een grôot 
 
 Anselmus Adornes aad ook verschillige belangryke functies in ’t stadsbestier van Brugge. J’ is zelfs een ende burgemêester gewist.
 
-In 1470 gink Adornes tegoare met zyn zeune Jan ip bedevoart noa [[Jeruzalem]]. Achter dat de [[paus]] under gezegend aad in [[Rome]], vertokkn ze met een grôot Genuees schip. Os ze were thuus woarn en ze de privé-kapelle, die Anselmus zyn voader bouwde in 1429 in Brugge, ofgewerkt tout de [[Jeruzalemkerke]], noar een kopie van d’Eilig Grafkapelle in Jeruzalem.
+In 1470 gink Adornes tegoare met zyn zeune Jan ip bedevoart noa [[Jerusalem]]. Achter dat de [[paus]] under gezegend aad in [[Rome]], vertokkn ze met een grôot Genuees schip. Os ze were thuus woarn en ze de privé-kapelle, die Anselmus zyn voader bouwde in 1429 in Brugge, ofgewerkt tout de [[Jerusalemkerke]], noar een kopie van d’Eilig Grafkapelle in Jeruzalem.
 
 Anselmus Adornes wierd deur de [[Bourgondische ertoogn]] geregeld belast met diplomatieke missies in ‘t Ôostn en Schotland. Je bemiddelde vo Genese commercantn en Spoansche marchangs in Schotland. 
 
