*Empty MediaWiki Message*

--- a/Anselmus_Adornes.mw
+++ b/Anselmus_Adornes.mw
@@ -15,7 +15,7 @@ Achter da zyn politieke rolle in Brugge uutgespeeld was krêeg Adornes in Schotl
 
 Ip 7 december [[1482]] makte Adornes een nieuw testament omdat ’n vrêesde vo z’n leevn. Je wilde begroavn wordn in de Sint-Michaelkerke neffest ’t kastêel van Linlithgow. Kort doarip wierd ’n in een klôoster vermôord binst een pelgrimstocht deur Schotland. 
 
-Ip 3 moarte 1483 wast er een uutvoartdienst vo Anselmus Adornes in de Jeruzalemkerke in Brugge. Z’n [[erte]] wierd in een kiste uut Schotland overgebrocht en bygezet in ’t graf by z’n vrouwe Margareta van der Banck (gestorvn round 1463). Da grafmonument stoat centroal in de kerke. Adornes stoat ook ofgebeeld tegoare me z’n vrouwe ip een veister in gebrandschilderd glas.
+Ip 3 moarte 1483 wast er een uutvoartdienst vo Anselmus Adornes in de Jerusalemkerke in Brugge. Z’n [[erte]] wierd in een kiste uut Schotland overgebrocht en bygezet in ’t graf by z’n vrouwe Margareta van der Banck (gestorvn round 1463). Da grafmonument stoat centroal in de kerke. Adornes stoat ook ofgebeeld tegoare me z’n vrouwe ip een veister in gebrandschilderd glas.
 
 [[Categorie: Brugge]]
 
