--- a/1421.mw
+++ b/1421.mw
@@ -2,7 +2,7 @@
 ;november
 *[[19 november|19]] - [[Duunkerke III|Twiddn Sint-Elizabethsvloed]]
 
-[[Categorie:15e eeuw]]
+[[Categorie:1420-1429]]
 
 [[af:1421]]
 [[am:1421 እ.ኤ.አ.]]
