*Empty MediaWiki Message*

--- a/1428.mw
+++ b/1428.mw
@@ -1,7 +1,7 @@
 ==Geboorn==
 *[[Isabella van Portugal (1428-1496)|Isabella van Portugal]]
 
-[[Categorie:15e eeuw]]
+[[Categorie:1420-1429]]
 
 [[af:1428]]
 [[am:1428 እ.ኤ.አ.]]
