--- a/Forestier.mw
+++ b/Forestier.mw
@@ -4,7 +4,7 @@ Gekende forestiers uut de Vlamsche geschiedenisse woarn [[Lyderic]], [[Inghelram
 
 De forestiers zoun an de boasis liggn van ’t [[Groafschap Vloandern]]. [[Karel den Grôotn]]  zoudt  de streke van [[Oarelbeke]] in lêen geschounkn en an de forestier Lyderic, vôorvoader van [[Boudewyn I van Vloandern]].
 
-In Oarelbeke ist er een voetbolstadium, sporthalle en een poar stroatn vernoemd noa de forestiers.
+In Oarelbeke ist er een voetbolstadium en sporthalle vernoemd noa de forestiers. G'eit er ôok de Scouts Liederik, Lions Club Harelbeke Liederik, café de Liederik, Forestier Liederikstraat, Forestier Ingelramstraat en Forestierstraat.
 
 [[categorie: Frankisch Ryk]]
 [[Categorie: Oarelbeke]]
