*Empty MediaWiki Message*

--- a/1457.mw
+++ b/1457.mw
@@ -2,7 +2,7 @@
 ;februoari
 *[[13 februoari|13]] - [[Maria van Bourgondië]]
 
-[[Categorie:15e eeuw]]
+[[Categorie:1450-1459]]
 
 [[af:1457]]
 [[am:1457 እ.ኤ.አ.]]
