*Empty MediaWiki Message*

--- a/1459.mw
+++ b/1459.mw
@@ -1,7 +1,7 @@
 ==Geboorn==
 ;moarte
 *[[22 moarte|22]] - [[Maximiliaan I]]
-[[Categorie:15e eeuw]]
+[[Categorie:1450-1459]]
 
 [[af:1459]]
 [[am:1459 እ.ኤ.አ.]]
