*Empty MediaWiki Message*

--- a/1482.mw
+++ b/1482.mw
@@ -10,7 +10,7 @@
 ;meie
 * [[16 mei]] - [[Anthonis de Roovere]] (52), [[Brugge|Brugs]] [[dichter]] en proza[[schryver]]
 
-[[Categorie:15e eeuw]]
+[[Categorie:1480-1489]]
 
 [[af:1482]]
 [[am:1482 እ.ኤ.አ.]]
