--- a/April.mw
+++ b/April.mw
@@ -3,7 +3,7 @@
 '''April''' es de vierde moand in de [[Gregorioanse kalender]]. De moand telt 30 doagn en es genoemd noo het [[Latyn]]se woord ''aperire'' wa da ''oop'nen'' wil zeggn. Da verwyst noo het openen van de bloemn en bottn in de natuur, want april es de echt êeste moand van de lente. Het weer es redelik wisselvallig, gelik da ze zeggn: ''[[moarte|moartse]] buien, aprilse grilln''. 
 
 ==Specioale doagn==
-*[[1 april]]: De dag woarip da je u noastn ne loere meug droain.
+*[[1 april]]: De dag woarip da je u noastn meug kulln.
 * April es ôok de moand woarin da [[Poasn]] mêestol volt, moar da des nie ip nen vastn dag. Gekoppeld an Poasn zyn der nog een aantal belangryke doagn in het [[Christndom]]: [[palmzundag]], [[witte donderdag]], [[goede vrydag]] en [[poasmoandag]]. In [[Kortryk]] start de [[Poasfôre]] ip witte donderdag.
 
 {{moandn}}
