--- a/Irrationoale_getalln.mw
+++ b/Irrationoale_getalln.mw
@@ -6,3 +6,50 @@ De [[rationoale getalln]] zyn dedie daj wel kunt schryvn lik 'n quotiënt van tw
 {{beg}}
 
 [[Categorie:Getal]]
+
+[[bg:Ирационално число]]
+[[bn:অমূলদ সংখ্যা]]
+[[bs:Iracionalni brojevi]]
+[[ca:Nombre irracional]]
+[[cs:Iracionální číslo]]
+[[da:Irrationale tal]]
+[[de:Irrationale Zahlen]]
+[[el:Άρρητος αριθμός]]
+[[en:Irrational number]]
+[[eo:Neracionala nombro]]
+[[es:Número irracional]]
+[[et:Irratsionaalarvud]]
+[[fa:عدد گنگ]]
+[[fi:Irrationaaliluku]]
+[[fr:Nombre irrationnel]]
+[[gl:Número irracional]]
+[[he:מספר אי רציונלי]]
+[[hr:Iracionalni broj]]
+[[hu:Irracionális szám]]
+[[id:Bilangan irasional]]
+[[is:Óræðar tölur]]
+[[it:Numero irrazionale]]
+[[ja:無理数]]
+[[kk:Рабайсыз сан]]
+[[ko:무리수]]
+[[la:Numerus irrationalis]]
+[[lmo:Nümar irazziunaal]]
+[[lo:ຈຳນວນອະປົກກະຕິ]]
+[[lt:Iracionalusis skaičius]]
+[[nn:Irrasjonelle tal]]
+[[no:Irrasjonalt tall]]
+[[pl:Liczby niewymierne]]
+[[pt:Número irracional]]
+[[ro:Număr iraţional]]
+[[ru:Иррациональное число]]
+[[scn:Nùmmuru irrazziunali]]
+[[sh:Iracionalni broj]]
+[[sk:Iracionálne číslo]]
+[[sl:Iracionalno število]]
+[[sr:Ирационалан број]]
+[[sv:Irrationellt tal]]
+[[th:จำนวนอตรรกยะ]]
+[[tr:Oransız sayılar]]
+[[uk:Ірраціональні числа]]
+[[vi:Số vô tỉ]]
+[[zh:無理數]]
