volgens myn: e schoolvôorbeeld van e trekzakartikel...

--- a/Sofia_Rotaru.mw
+++ b/Sofia_Rotaru.mw
@@ -1,3 +1,4 @@
+{{Beg}}
 '''Sofia Rotaru''' (7 ogustus 1947 - Marshintsy, Novoselitskiy Rayon, Chernivtsi Oblast, Ukraine) is een Russoanse, Ukrainoanse, Moldvioanse en Sowjetionase zangeresse, actrice en productrice. De press noemn eur soms wel eki de Queen of Pop<ref>{{cite web|url=http://rus.postimees.ee/100807/glavnaja/estonija/20654.php|title=Pop Queen Sofia Rotaru celebrated her 60th Anniversary as a queen should| work=Postimees| accessdate=2007-08-10}}</ref><ref>{{cite web|url=http://www.kp.ru/daily/24018.3/88065|title="RETRO FM Legends" | work=Komsomolskaya Pravda, 13 decembrie 2007| accessdate=2008-03-03}}</ref>.
 
 ==Bronn==
