--- a/Eernegem.mw
+++ b/Eernegem.mw
@@ -16,10 +16,10 @@
 |postcode=8480
 |netn=
 |}}
-'''Eernegem''' (Nederlands: ''Eernegem'') is e [[dêelgemêente]] van de [[België|Belgische]] [[gemêente]] [[Ichtegem]]. 't Is geleegn tussn [[Ichtegem|Ichtegem-centrum]] en [[Gistel]]. Der weun oungeveer 6585 inweuners.
+'''Eernegem''' (Nederlands: ''Eernegem'') is e [[dêelgemêente]] van de [[België|Belgische]] [[gemêente]] [[Ichtegem]]. 't Is geleegn tussn [[Ichtegem|Ichtegem-centrum]] en [[Gistel]]. Der weunn oungeveer 6585 inweuners.
 
 == Korte geschiedenisse ==
-Volgest specialistn kêert de noame Eernegem were toet 'n tyd van de Frankische kolonisoasje. Êen of ander Arnjo (Erno) et ier en oeve begost. Ze kienders (=inga) bleevn d'r weun (=gem). De noame Eernegem betêeknt dus eigentlyk: weunplekke van de kienders van Arnjo. De êerenoeve bestot vermoedelik ol van 't joar zevenounderd.
+Volgest specialistn kêert de noame Eernegem were toet 'n tyd van de Frankische kolonisoasje. Êen of ander Arnjo (Erno) et ier en oeve begost. Ze kienders (=inga) bleevn d'r weunn (=gem). De noame Eernegem betêeknt dus eigentlik: weunplekke van de kienders van Arnjo. De êernoeve bestot vermoedelik ol van 't joar zevenounderd.
 
 In't nôorden van 't dorp, lanst de Ganzestroate, o je toet 1954 e mote. Da was verzekerst ter versterkienge teegn d'involln van de Nôormann in de joarn negenounderd.
 
