--- a/Portoal:Kunst_en_Cultuur.mw
+++ b/Portoal:Kunst_en_Cultuur.mw
@@ -26,7 +26,7 @@ __NOTOC__
 * [[Vlaamse Filmpjes]], [[’t Manneke uut de Mane]], [[Peegie]]
 * '''Boekn''': [[Tijl Uilenspiegel]]
 * '''Mythn, soagn en legendn''': [[:Categorie:Egyptische mythologie|Egyptische mythologie]], [[:Categorie:Germoansche mythologie|Germoansche mythologie]], [[Kalle met den oak]], [[Lange Wapper]], [[Legende (vertellienge)|Legende]], [[Mêester Ghybe]], [[Mythe]], [[Reus]], [[Roesschaert]], [[Rolarius]], [[Sage]], [[Zeemarminne]]
-* '''Butenlansche schryvers''': [[Alexander Poesjkin]], [[John Steinbeck]], [[Joost van den Vondel]]
+* '''Butenlandsche schryvers''': [[Alexander Poesjkin]], [[Jorge Queirolo Bravo]], [[John Steinbeck]], [[Joost van den Vondel]]
 
 |-
 | width="50%" style="border: 1px solid #BCD2EE; background-color:aliceblue; padding:1em;" valign="top" |
