*Empty MediaWiki Message*

--- a/1963.mw
+++ b/1963.mw
@@ -17,6 +17,7 @@
 ;oktober
 *[[15 oktober|15]] - [[Adelheid Byttebier]]
 *[[19 oktober|19]] - [[Laurent van België]]
+*[[26 oktober|26]] - [[Jorge Queirolo Bravo]]
 
 ==Gestorvn==
 *[[13 moarte|13]] - [[Eugeen Vansteenkiste]]
