*Empty MediaWiki Message*

--- a/Kasselberg.mw
+++ b/Kasselberg.mw
@@ -11,6 +11,6 @@
 |steilstekilomeiter = 10
 }}
 
-’n '''Kasselberg''' (Frans: Mont Cassel) is een euvel van 176 meters in [[Kassel]]. ’t Is doamei ’t ogste punt van de [[Westoek]] en ’t Outland.
+’n '''Kasselberg''' (Frans: Mont Cassel) is e [[getuugneuvel]] van 176 meters in [[Kassel]]. ’t Is doamei ’t ogste punt van de [[Westoek]] en ’t Outland.
 
 ’n Euvel is eleid mi kossjiestêenn, en ’t is ton oek e perfect stiksje parcours voe klassiekers lik [[Gent-Wevelgem]] (1957, 1993, 1994, 1995).
