--- a/Rôonberg.mw
+++ b/Rôonberg.mw
@@ -1,4 +1,4 @@
-De '''Rôonberg''', (Nederlands: ''Rodeberg'') is een euvel in [[Westouter]], in 't [[Euvelland]]. En is 129 meter oge, en e besloat om en by de 25 ectoarn. Lasen de Rôonberg legt de [[Zwortnberg]] (Nederlands: ''Zwarteberg'', Frans: Mont Noir). 
+De '''Rôonberg''', (Nederlands: ''Rodeberg'') is e [[getuugneuvel]] in [[Westouter]], in 't [[Euvelland]]. En is 129 meter oge, en e besloat om en by de 25 ectoarn. Lasen de Rôonberg legt de [[Zwortnberg]] (Nederlands: ''Zwarteberg'', Frans: Mont Noir). 
 
 == Attrasksjes ==
 * De Rôonberg is een ideaal pleksje voe mountainbikers e wandeloars. Op de nôordkant ejje 't Ellegat (Nederlands: Hellegat), e sôorte va bebusjte ravyne. Doa ountspringt d'Ellegatbeke. 
