--- a/Getuugnheuvel.mw
+++ b/Getuugnheuvel.mw
@@ -12,3 +12,5 @@ Ton dat de zêe achter 't Mioceen werekêerde na 't nôordn, begostn de zandn t'
 
 === Vrankryk ===
 * [[Kasselberg]]
+
+[[Categorie:Geografie van België]]
