--- a/Getuugnheuvel.mw
+++ b/Getuugnheuvel.mw
@@ -14,3 +14,5 @@ Ton dat de zêe achter 't Mioceen werekêerde na 't nôordn, begostn de zandn t'
 * [[Kasselberg]]
 
 [[Categorie:Geografie van België]]
+
+[[nl: Getuigenheuvel]]
