--- a/Getuugnheuvel.mw
+++ b/Getuugnheuvel.mw
@@ -8,6 +8,7 @@ Ton dat de zêe achter 't Mioceen werekêerde na 't nôordn, begostn de zandn t'
 === Belgie ===
 * [[Kemmelberg]]: 't ogste punt van Vloandern.
 * [[Rôonberg]]
+* [[Scherpnberg]]
 * [[Zwortnberg]]
 
 === Vrankryk ===
