*Empty MediaWiki Message*

--- a/NGA.mw
+++ b/NGA.mw
@@ -19,10 +19,10 @@ Nog nie olle puntn zyn ingevuld, mo sommigte puntn goan specifiek over West-Vloa
 *29. [[Yves Leterme]] meugt Gent ollêne nog binn me ze broek up ze knoezels en liefst me roaze pluumn in ze gat.
 
 ==Reactie==
-'t Is ol vele commentoar up ekommn, oundermêer up forums. 't Volt doar up oe serieus dan sommigte menschn 't ollemoale neemn. Oundertusschn zyn der ouk ol êentige interviews round ewist up de radio (Radio 2) en in de gazette (Nieuwsblad).
+'t Is ol vele commentoar up ekommn, oundermêer up forums. 't Volt doar up oe serieus dan sommigte menschn 't ollemoale neemn. Oundertusschn zyn der ouk ol êentige interviews round ewist up de TV (Phara, één), radio (Radio 2) en in de mêeste gazettn.
 
-==Ountmaskerienge==
-Ip 20 moarte komt er in 't Nieuwsblad (kykt noa [[#==Externe koppeliengn==|Externe koppeliengn]]) en verdudelykienge met de echte motivoatie van de persifloage en nen iproep voe de fêeste van 30 moarte ip Sint-Jacobs met onder andre West-Vlamsche groepn. 
+=='t Ende==
+Ip 20 moarte komt er in 't Nieuwsblad en ip de NGA site (kykt noa [[#==Externe koppeliengn==|Externe koppeliengn]]) en verdudelykienge met de echte motivoatie van de persifloage en nen iproep voe de fêeste van 30 moarte ip Sint-Jacobs met onder andre West-Vlamsche groepn. 
 
 ===Teegnbewegiengn===
 *WDF (West-Vlaams Democratisch Front)
@@ -33,7 +33,7 @@ Ip 20 moarte komt er in 't Nieuwsblad (kykt noa [[#==Externe koppeliengn==|Exter
 
 ==Externe koppeliengn==
 *[http://www.gentonafhankelijk.org 'n Officieeln site van de NGA]
-*[http://www.gentenaar.be/Article/Detail.aspx?ArticleID=JM1PH0NC&PostCode=9000 Artikel Gentenoare]
+*[http://www.gentonafhankelijk.org/?p=154 Motivoatie en 't begun van 't ende]
 
 [[Categorie:Belgische actiegroep]]
 [[Categorie:Gent]]
