/* Transport en verkêer */

--- a/Brugge.mw
+++ b/Brugge.mw
@@ -244,7 +244,7 @@ Vanuut de grôte stoatie van Brugge is 't er per eure mingstens 1 tring nor ol d
 
 Ook den [[Thalys]] van [[Parys]] over Brussel toet in Ostende stopt in Brugge.
 
-'t Dichste vliegpling by Brugge is Ostende, ip ±20km van Brugge; D' [[Internationoale Luchtoavn Ostende-Brugge]]
+'t Dichste vliegpling by Brugge ligt in Ostende, ip oengevêer 30km van't centrum van Brugge: D' [[Internationoale Luchtoavn Ostende-Brugge]]
 
 ==Voetbol==
 [[Image:Janbreydelstadion.jpg|left|thumb|180px|Jan Breydelstadion]]
